--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-simple": "^0.5.6",
     "mongoose": "^6.3.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.2"
@@ -20,6 +22,8 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/dotenv": "^8.2.0",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/jwt-simple": "^0.5.33",
     "ts-node": "^10.8.0"
   }
 }
